--- a/src/RoleManage/Views/Login/Index.cshtml
+++ b/src/RoleManage/Views/Login/Index.cshtml
@@ -26,9 +26,10 @@
         <!-- /.login-logo -->
         <div class="login-box-body">
             <p class="login-box-msg">权限管理系统</p>
-            <div asp-validation-summary="All" class="text-danger"></div>
+           
+            @*<div asp-validation-summary="All" class="text-danger"></div>*@
             @*<form action="/Home/Index" method="post">  asp-controller 智能提示不好用 todo:*@
-            <form asp-controller="Login" as-action="Index" method="post">
+            <form asp-controller="Login" as-action="Index" method="post" onsubmit="onSubmit()">
                 <div class="form-group has-feedback">
                     <input asp-for="UserName" type="text" class="form-control" placeholder="用户名">
                     <span class="glyphicon glyphicon-user form-control-feedback"></span>
@@ -49,7 +50,8 @@
                     </div>
                     <!-- /.col -->
                     <div class="col-xs-4">
-                        <button type="submit" class="btn btn-primary btn-block btn-flat">登录</button>
+                        <button id="btnLogin" type="submit" class="btn btn-primary btn-block btn-flat">登录</button>
+                        <input id="errorInfo" type="hidden" value="@ViewBag.ErrorInfo" />
                     </div>
                     <!-- /.col -->
                 </div>
@@ -61,14 +63,47 @@
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="~/lib/iCheck/icheck.js"></script>
-    @*<script>
+    <script src="~/lib/layer/build/layer.js"></script>
+    <script src="~/lib/jquery.cookie/jquery.cookie.js"></script>
+    <script>
         $(function () {
             $('input').iCheck({
                 checkboxClass: 'icheckbox_square-blue',
                 radioClass: 'iradio_square-blue',
                 increaseArea: '20%' // optional
             });
+
+            //显示服务端验证的错误信息
+            if ($("#errorInfo").val()) {
+                {
+                    layer.tips($("#errorInfo").val(), "#btnLogin");
+                };
+            };
+
+            //判断之前是否有设置cookie，如果有，则设置【记住我】选择框
+            if ($.cookie("Role_userName") != undefined) {
+                $("#RememberMe").attr("checked", "checked");
+            }
+            else {
+                $("#RememberMe").removeAttr("checked");
+            }
+
+            //读取cookie
+            if ($("#RememberMe:checked").length > 0) {
+                $("#UserName").val($.cookie("Role_userName"));
+                $("#Password").val($.cookie("Role_password"));
+            }
         });
-    </script>*@
+        function onSubmit() {
+            if ($("RememberMe:checked").length > 0) {//设置cookie
+                $.cookie("Role_userName", $("#UserName").val());
+                $.cookie("Role_password", $("$Password").val());
+            }
+            else {//清除cookie
+                $.removeCookie("Role_userName");
+                $.removeCookie("Role_password");
+            }
+        };
+   </script>
 </body>
 </html>
